Changed html file

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -37,33 +37,21 @@
         		<h3 class="text-info">Semantic Search in Q&A System</h3>
       		</div>
 
-
-
-
 			<div class="row">
 				<div class="col-sm-10">
-					<p> Experiment details </p>
+					<p><strong> Ethics reference number:</strong> ERGO/FPSE/12003 </p>
+					<p><strong> Version:</strong> 1 </p>
+					<p><strong> Date:</strong> 2014-11-18 </p>
+					<p><strong> Study Title:</strong> Sematic Search in Q&A Systems </p>
+					<p><strong> Investigator:</strong> Priyanka Singh </p>
+				
+
 					<p>This is a template for a simple marketing or informational website. It includes a large callout called a jumbotron and three supporting pieces of content. Use it as a starting point to create something more unique. </p>
 				
 					<p> Pick the programming language </p>
 					<a href="#" class="btn btn-lg btn-info">Python</a>
 					<a href="#" class="btn btn-lg btn-info">Java</a>
 				</div>
-
-				<div class="col-sm-3">
-
-					<form class="form-signin" role="form" method="get" action="email.php">
-	        			<h2 class="form-signin-heading">Please sign in</h2>
-	        			<label for="inputEmail" class="sr-only">Email address</label>
-	        			<input type="email" name="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-	        			<div class="checkbox">
-	          				<label>
-	            				<input type="checkbox" value="remember-me"> Remember me
-	          				</label>
-	        			</div>
-	        			<button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-	      			</form>
-	      		</div>
 			</div>
 		</div>
 	</body>
