Changed index.html file

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -37,8 +37,10 @@
         		<h3 class="text-info">Semantic Search in Q&A System</h3>
       		</div>
 
+
 			<div class="row">
 				<div class="col-sm-10">
+					<h3 id="sec4">Ethisc Information</h3>
 					<p><strong> Ethics reference number:</strong> ERGO/FPSE/12003 </p>
 					<p><strong> Version:</strong> 1 </p>
 					<p><strong> Date:</strong> 2014-11-18 </p>
@@ -70,6 +72,7 @@
 					<p> <strong>What happens if something goes wrong? </strong>  Should you have any concern or complaint, contact me if possible (<a href="mailto:ps1w07@ecs.soton.ac.uk">ps1w07@ecs.soton.ac.uk</a>), otherwise please contact the FPSE Office or any other authoritative body such as Dr Martina Prude, Head of Research Governance (02380 595058, <a href="mailto:mad4@soton.ac.uk">mad4@soton.ac.uk</a>). </p>
 
 					<hr>
+					<!---
 
 					<h3>Instructions</h3>
 
@@ -100,10 +103,14 @@
 					<p>If you have any question, you can email me at <a href="mailto:ps1w07@ecs.soton.ac.uk">ps1w07@ecs.soton.ac.uk</a> and I will get back to you. </p>
 
 					<hr> 
+
+				-->
 				
 					<h3> Pick a programming language </h3>
 					<!-- <a href="#" class="btn btn-lg btn-info">Python</a> -->
 					<a href="https://www.isurvey.soton.ac.uk/start.php?id=13724" class="btn btn-lg btn-info">Java</a>
+
+					<hr>
 				</div>
 			</div>
 		</div>
