Changed index.html file

--- a/webpage/index.html
+++ b/webpage/index.html
@@ -40,7 +40,7 @@
 
 			<div class="row">
 				<div class="col-sm-10">
-					<h3 id="sec4">Ethisc Information</h3>
+					<h3 id="sec4">Ethics Information</h3>
 					<p><strong> Ethics reference number:</strong> ERGO/FPSE/12003 </p>
 					<p><strong> Version:</strong> 1 </p>
 					<p><strong> Date:</strong> 2014-11-18 </p>
