--- a/webpage/index.html
+++ b/webpage/index.html
@@ -30,8 +30,8 @@
         		<nav>
           			<ul class="nav nav-pills pull-right">
             			<li role="presentation" class="active"><a href="#">Home</a></li>
-           				<li role="presentation"><a href="#">About</a></li>
-            			<li role="presentation"><a href="#">Contact</a></li>
+           				<!-- <li role="presentation"><a href="#">About</a></li> -->
+            			<li role="presentation"><a href="mailto:ps1w07@ecs.soton.ac.uk">Contact</a></li>
           			</ul>
         		</nav>
         		<h3 class="text-info">Semantic Search in Q&A System</h3>
@@ -40,7 +40,7 @@
 
 			<div class="row">
 				<div class="col-sm-10">
-					<h3 id="sec4">Ethics Information</h3>
+					<h3 id="sec4">Ethic Information</h3>
 					<p><strong> Ethics reference number:</strong> ERGO/FPSE/12003 </p>
 					<p><strong> Version:</strong> 1 </p>
 					<p><strong> Date:</strong> 2014-11-18 </p>
@@ -69,7 +69,7 @@
 
 					<p> <strong>What happens if I change my mind? </strong>  You may withdraw at any time and for any reason.  You may withdraw your data at any time and for any reason prior to its destruction. </p>
 
-					<p> <strong>What happens if something goes wrong? </strong>  Should you have any concern or complaint, contact me if possible (<a href="mailto:ps1w07@ecs.soton.ac.uk">ps1w07@ecs.soton.ac.uk</a>), otherwise please contact the FPSE Office or any other authoritative body such as Dr Martina Prude, Head of Research Governance (02380 595058, <a href="mailto:mad4@soton.ac.uk">mad4@soton.ac.uk</a>). </p>
+					<p> <strong>What happens if something goes wrong? </strong>  Should you have any concern or complaint, contact me if possible (<a href="mailto:ps1w07@ecs.soton.ac.uk">ps1w07@ecs.soton.ac.uk</a>), otherwise please contact the FPSE Office or any other authoritative body such as Head of Research Governance (02380 595058). </p>
 
 					<hr>
 					<!---
