--- a/webpage/index.html
+++ b/webpage/index.html
@@ -118,8 +118,8 @@
 				
 					<h3> Pick a programming language </h3>
 					<!-- <a href="#" class="btn btn-lg btn-info">Python</a> -->
-					<a href="https://www.isurvey.soton.ac.uk/start.php?id=13724" class="btn btn-lg btn-info">Java</a>
-					<a href="https://www.isurvey.soton.ac.uk/start.php?id=13709" class="btn btn-lg btn-info">Python</a>
+					<a href="https://www.isurvey.soton.ac.uk/start.php?id=13724" target="_blank" class="btn btn-lg btn-info">Java</a>
+					<a href="https://www.isurvey.soton.ac.uk/start.php?id=13709" target="_blank" class="btn btn-lg btn-info">Python</a>
 
 					<hr>
 				</div>
